--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -1,15 +1,143 @@
+msgid ""
+msgstr ""
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_lv"
+
+msgid "telephone options"
+msgstr "citas tālruņa līnijas"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_lv"
+
+msgid "contact form"
+msgstr "saziņas veidlapu"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_lv"
+
+msgid "local EU office"
+msgstr "vietējo ES biroju"
+
+msgid "Search for EU social media channels"
+msgstr "ES sociālajos tīklos"
+
+msgid "https://europa.eu/european-union/contact/social-networks_en"
+msgstr "https://europa.eu/european-union/contact/social-networks_lv"
+
+msgid "European Parliament"
+msgstr "Eiropas Parlaments"
+
+msgid "http://www.europarl.europa.eu/portal/"
+msgstr "http://www.europarl.europa.eu/portal/lv"
+
+msgid "European Council"
+msgstr "Eiropadome"
+
+msgid "http://www.consilium.europa.eu/en/european-council/"
+msgstr "http://www.consilium.europa.eu/lv/european-council/"
+
+msgid "Council of the European Union"
+msgstr "Eiropas Savienības Padome"
+
+msgid "http://www.consilium.europa.eu/en/home/"
+msgstr "http://www.consilium.europa.eu/lv/home/"
+
+msgid "Presidency of the Council of the EU"
+msgstr "ES Padomes prezidentūra"
 
 msgid "European Commission"
 msgstr "Eiropas Komisija"
+
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "http://ec.europa.eu/index_lv.htm"
+
+msgid "Court of Justice of the European Union (CJEU)"
+msgstr "Eiropas Savienības Tiesa"
+
+msgid "http://curia.europa.eu/jcms/jcms/j_6/en/"
+msgstr "http://curia.europa.eu/jcms/jcms/j_6/lv/"
+
+msgid "European Central Bank (ECB)"
+msgstr "Eiropas Centrālā banka (ECB)"
+
+msgid "https://www.ecb.europa.eu/home/html/index.en.html"
+msgstr "https://www.ecb.europa.eu/home/languagepolicy/html/index.lv.html"
+
+msgid "European Court of Auditors (ECA)"
+msgstr "Eiropas Revīzijas palāta"
+
+msgid "http://www.eca.europa.eu/en"
+msgstr "http://www.eca.europa.eu/lv"
+
+msgid "European External Action Service (EEAS)"
+msgstr "Eiropas Ārējās darbības dienests (EĀDD)"
+
+msgid "https://eeas.europa.eu/headquarters/headquarters-homepage_en"
+msgstr "http://eeas.europa.eu/index_lv.htm"
+
+msgid "European Economic and Social Committee (EESC)"
+msgstr "Eiropas Ekonomikas un sociālo lietu komiteja (EESK)"
+
+msgid "http://www.eesc.europa.eu/?i=portal.en.home"
+msgstr "http://www.eesc.europa.eu/?i=portal.lv.home"
+
+msgid "European Committee of the Regions (CoR)"
+msgstr "Eiropas Reģionu komiteja (RK)"
+
+msgid "http://cor.europa.eu/en/"
+msgstr "http://cor.europa.eu/lv/"
+
+msgid "European Investment Bank (EIB)"
+msgstr "Eiropas Investīciju banka (EIB)"
+
+msgid "European Data Protection Supervisor (EDPS)"
+msgstr "Eiropas Datu aizsardzības uzraudzītājs (EDAU)"
+
+msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
+msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=lv"
+
+msgid "Sitemap"
+msgstr "Vietnes plāns"
+
+msgid "/european-union/abouteuropa/sitemap_en"
+msgstr "/european-union/abouteuropa/sitemap_lv"
+
+msgid "About this site"
+msgstr "Par šo vietni"
+
+msgid "/european-union/abouteuropa_en"
+msgstr "/european-union/abouteuropa_lv"
+
+msgid "Language policy"
+msgstr "valodu politika"
+
+msgid "/european-union/abouteuropa/language-policy_en"
+msgstr "/european-union/abouteuropa/language-policy_lv"
+
+msgid "Privacy policy"
+msgstr "Privātuma aizsardzība"
+
+msgid "/european-union/abouteuropa/privacy-policy_en"
+msgstr "/european-union/abouteuropa/privacy-policy_lv"
+
+msgid "Legal notice"
+msgstr "Juridisks paziņojums"
+
+msgid "/european-union/abouteuropa/legal_notices_en"
+msgstr "/european-union/abouteuropa/legal_notices_lv"
+
+msgid "Cookies"
+msgstr "Sīkdatnes"
+
+msgid "/european-union/abouteuropa/cookies_en"
+msgstr "/european-union/abouteuropa/cookies_lv"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_lv"
 
 msgid "European Commission website"
 msgstr "Eiropas Komisijas tīmekļa vietne"
-
-msgid "Policies, information and services"
-msgstr "Politikas jomas, informācija un dienesti"
 
 msgid "Follow the European Commission"
 msgstr "Sekojiet Eiropas Komisijai"
@@ -41,9 +169,6 @@ msgstr "Par Komisijas jauno tīmekļa vietni"
 msgid "https://ec.europa.eu/info/language-policy_en"
 msgstr "http://ec.europa.eu/info/resources-partners_lv"
 
-msgid "Language policy"
-msgstr "Resursi partneriem"
-
 msgid "https://ec.europa.eu/info/resources-partners_en"
 msgstr "https://ec.europa.eu/info/language-policy_lv"
 
@@ -53,20 +178,11 @@ msgstr "Valodu politika"
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_lv"
 
-msgid "Cookies"
-msgstr "Sīkdatnes"
-
 msgid "https://ec.europa.eu/info/privacy-policy_en"
 msgstr "https://ec.europa.eu/info/privacy-policy_lv"
 
-msgid "Privacy policy"
-msgstr "Privātuma aizsardzība"
-
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_lv"
-
-msgid "Legal notice"
-msgstr "Juridisks paziņojums"
 
 msgid "https://ec.europa.eu/info/contact_en"
 msgstr "https://ec.europa.eu/info/contact_lv"
@@ -74,3 +190,5 @@ msgstr "https://ec.europa.eu/info/contact_lv"
 msgid "Contact"
 msgstr "Kontakti"
 
+msgid "Policies, information and services"
+msgstr "Politikas jomas, informācija un dienesti"
