--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -1,15 +1,140 @@
+msgid ""
+msgstr ""
 
-msgid "European Commission"
-msgstr "Euroopa Komisjon"
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_et"
+
+msgid "telephone options"
+msgstr "helistamisvõimalusi"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_et"
+
+msgid "contact form"
+msgstr "kontaktvormi vahendusel"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_et"
+
+msgid "local EU office"
+msgstr "kohalikus ELi esinduses"
+
+msgid "Search for EU social media channels"
+msgstr "Kasutage ELi sotsiaalmeedia kanaleid"
+
+msgid "https://europa.eu/european-union/contact/social-networks_en"
+msgstr "https://europa.eu/european-union/contact/social-networks_et"
+
+msgid "European Parliament"
+msgstr "Euroopa Parlament"
+
+msgid "http://www.europarl.europa.eu/portal/"
+msgstr "http://www.europarl.europa.eu/portal/et"
+
+msgid "European Council"
+msgstr "Euroopa Ülemkogu"
+
+msgid "http://www.consilium.europa.eu/en/european-council/"
+msgstr "http://www.consilium.europa.eu/et/european-council/"
+
+msgid "Council of the European Union"
+msgstr "Euroopa Liidu Nõukogu"
+
+msgid "http://www.consilium.europa.eu/en/home/"
+msgstr "http://www.consilium.europa.eu/et/home/"
+
+msgid "Presidency of the Council of the EU"
+msgstr "Euroopa Liidu Nõukogu eesistujariik"
+
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_et"
+
+msgid "Court of Justice of the European Union (CJEU)"
+msgstr "Euroopa Liidu Kohus"
+
+msgid "http://curia.europa.eu/jcms/jcms/j_6/en/"
+msgstr "http://curia.europa.eu/jcms/jcms/j_6/et/"
+
+msgid "European Central Bank (ECB)"
+msgstr "Euroopa Keskpank (EKP)"
+
+msgid "https://www.ecb.europa.eu/home/html/index.en.html"
+msgstr "https://www.ecb.europa.eu/home/languagepolicy/html/index.et.html"
+
+msgid "European Court of Auditors (ECA)"
+msgstr "Euroopa Kontrollikoda"
+
+msgid "http://www.eca.europa.eu/en"
+msgstr "http://www.eca.europa.eu/et"
+
+msgid "European External Action Service (EEAS)"
+msgstr "Euroopa välisteenistus (EEAS)"
+
+msgid "https://eeas.europa.eu/headquarters/headquarters-homepage_en"
+msgstr "http://eeas.europa.eu/index_et.htm"
+
+msgid "European Economic and Social Committee (EESC)"
+msgstr "Euroopa Majandus- ja Sotsiaalkomitee"
+
+msgid "http://www.eesc.europa.eu/?i=portal.en.home"
+msgstr "http://www.eesc.europa.eu/?i=portal.et.home"
+
+msgid "European Committee of the Regions (CoR)"
+msgstr "Euroopa Regioonide Komitee"
+
+msgid "http://cor.europa.eu/en/"
+msgstr "https://cor.europa.eu/et"
+
+msgid "European Investment Bank (EIB)"
+msgstr "Euroopa Investeerimispank"
+
+msgid "European Data Protection Supervisor (EDPS)"
+msgstr "Euroopa Andmekaitseinspektor"
+
+msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
+msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=et"
+
+msgid "Sitemap"
+msgstr "Sisujuht"
+
+msgid "/european-union/abouteuropa/sitemap_en"
+msgstr "/european-union/abouteuropa/sitemap_et"
+
+msgid "About this site"
+msgstr "Selle saidi kohta"
+
+msgid "/european-union/abouteuropa_en"
+msgstr "/european-union/abouteuropa_et"
+
+msgid "Language policy"
+msgstr "Keelepoliitika"
+
+msgid "/european-union/abouteuropa/language-policy_en"
+msgstr "/european-union/abouteuropa/language-policy_et"
+
+msgid "Privacy policy"
+msgstr "Isikuandmete kaitse"
+
+msgid "/european-union/abouteuropa/privacy-policy_en"
+msgstr "/european-union/abouteuropa/privacy-policy_et"
+
+msgid "Legal notice"
+msgstr "Õigusteave"
+
+msgid "/european-union/abouteuropa/legal_notices_en"
+msgstr "/european-union/abouteuropa/legal_notices_et"
+
+msgid "Cookies"
+msgstr "Küpsised"
+
+msgid "/european-union/abouteuropa/cookies_en"
+msgstr "/european-union/abouteuropa/cookies_et"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_et"
 
 msgid "European Commission website"
 msgstr "Euroopa Komisjoni veebisait"
-
-msgid "Policies, information and services"
-msgstr "Poliitikavaldkonnad, teave ja teenused"
 
 msgid "Follow the European Commission"
 msgstr "Jälgige Euroopa Komisjoni"
@@ -41,9 +166,6 @@ msgstr "Komisjoni uue veebikeskkonna tutvustus"
 msgid "https://ec.europa.eu/info/language-policy_en"
 msgstr "https://ec.europa.eu/info/language-policy_et"
 
-msgid "Language policy"
-msgstr "EKeelepoliitika"
-
 msgid "https://ec.europa.eu/info/resources-partners_en"
 msgstr "http://ec.europa.eu/info/resources-partners_et"
 
@@ -53,20 +175,11 @@ msgstr "Materjalid partneritele"
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_et"
 
-msgid "Cookies"
-msgstr "Küpsised"
-
 msgid "https://ec.europa.eu/info/privacy-policy_en"
 msgstr "https://ec.europa.eu/info/privacy-policy_et"
 
-msgid "Privacy policy"
-msgstr "Isikuandmete kaitse"
-
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_et"
-
-msgid "Legal notice"
-msgstr "Õigusteave"
 
 msgid "https://ec.europa.eu/info/contact_en"
 msgstr "https://ec.europa.eu/info/contact_et"
@@ -74,3 +187,5 @@ msgstr "https://ec.europa.eu/info/contact_et"
 msgid "Contact"
 msgstr "Kontakt"
 
+msgid "Policies, information and services"
+msgstr "Poliitikavaldkonnad, teave ja teenused"
