--- a/translations/oe_corporate_blocks-ga.po
+++ b/translations/oe_corporate_blocks-ga.po
@@ -1,15 +1,137 @@
+msgid ""
+msgstr ""
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_ga"
+
+msgid "telephone options"
+msgstr "roghanna teileafóin eile"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_ga"
+
+msgid "contact form"
+msgstr "bhfoirm theagmhála"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_ga"
+
+msgid "local EU office"
+msgstr "oifig áitiúil de chuid an Aontais"
+
+msgid "Search for EU social media channels"
+msgstr "Cainéil an Aontais Eorpaigh ar na meáin shóisialta a chuardach"
+
+msgid "https://europa.eu/european-union/contact/social-networks_en"
+msgstr "https://europa.eu/european-union/contact/social-networks_ga"
+
+msgid "European Parliament"
+msgstr "Parlaimint na hEorpa"
+
+msgid "http://www.europarl.europa.eu/portal/"
+msgstr "http://www.europarl.europa.eu/portal/ga"
+
+msgid "European Council"
+msgstr "An Chomhairle Eorpach"
+
+msgid "http://www.consilium.europa.eu/en/european-council/"
+msgstr "http://www.consilium.europa.eu/ga/european-council/"
+
+msgid "Council of the European Union"
+msgstr "Comhairle an Aontais Eorpaigh"
+
+msgid "http://www.consilium.europa.eu/en/home/"
+msgstr "http://www.consilium.europa.eu/ga/home/"
+
+msgid "Presidency of the Council of the EU"
+msgstr "Uachtaránacht Chomhairle an AE"
 
 msgid "European Commission"
 msgstr "An Coimisiún Eorpach"
+
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_ga"
+
+msgid "Court of Justice of the European Union (CJEU)"
+msgstr "Cúirt Bhreithiúnais an Aontais Eorpaigh"
+
+msgid "European Central Bank (ECB)"
+msgstr "an Banc Ceannais Eorpach (BCE)"
+
+msgid "https://www.ecb.europa.eu/home/html/index.en.html"
+msgstr "https://www.ecb.europa.eu/home/languagepolicy/html/index.ga.html"
+
+msgid "European Court of Auditors (ECA)"
+msgstr "Cúirt Iniúchóirí na hEorpa"
+
+msgid "http://www.eca.europa.eu/en"
+msgstr "http://www.eca.europa.eu/ga"
+
+msgid "European External Action Service (EEAS)"
+msgstr "An tSeirbhís Eorpach Gníomhaíochta Seachtraí (SEGS)"
+
+msgid "https://eeas.europa.eu/headquarters/headquarters-homepage_en"
+msgstr "http://eeas.europa.eu/index_ga.htm"
+
+msgid "European Economic and Social Committee (EESC)"
+msgstr "Coiste Eacnamaíoch agus Sóisialta na hEorpa (CESE)"
+
+msgid "http://www.eesc.europa.eu/?i=portal.en.home"
+msgstr "http://www.eesc.europa.eu/?i=portal.ga.home"
+
+msgid "http://cor.europa.eu/en/"
+msgstr "http://cor.europa.eu/ga/"
+
+msgid "European Investment Bank (EIB)"
+msgstr "An Banc Eorpach Infheistíochta (BEI)"
+
+msgid "European Data Protection Supervisor (EDPS)"
+msgstr "An Maoirseoir Eorpach ar Chosaint Sonraí (MECS)"
+
+msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
+msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=ga"
+
+msgid "Sitemap"
+msgstr "Mapa suímh"
+
+msgid "/european-union/abouteuropa/sitemap_en"
+msgstr "/european-union/abouteuropa/sitemap_ga"
+
+msgid "About this site"
+msgstr "Faoin suíomh seo"
+
+msgid "/european-union/abouteuropa_en"
+msgstr "/european-union/abouteuropa_ga"
+
+msgid "Language policy"
+msgstr "Beartas teanga"
+
+msgid "/european-union/abouteuropa/language-policy_en"
+msgstr "/european-union/abouteuropa/language-policy_ga"
+
+msgid "Privacy policy"
+msgstr "Beartas príobháideachais"
+
+msgid "/european-union/abouteuropa/privacy-policy_en"
+msgstr "/european-union/abouteuropa/privacy-policy_ga"
+
+msgid "Legal notice"
+msgstr "Fógra dlíthiúil"
+
+msgid "/european-union/abouteuropa/legal_notices_en"
+msgstr "/european-union/abouteuropa/legal_notices_ga"
+
+msgid "Cookies"
+msgstr "Fianáin"
+
+msgid "/european-union/abouteuropa/cookies_en"
+msgstr "/european-union/abouteuropa/cookies_ga"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_ga"
 
 msgid "European Commission website"
 msgstr "Suíomh gréasáin an Choimisiúin Eorpaigh"
-
-msgid "Policies, information and services"
-msgstr "Beartais, eolas agus seirbhísí"
 
 msgid "Follow the European Commission"
 msgstr "An Coimisiún Eorpach a leanúint"
@@ -41,9 +163,6 @@ msgstr "Eolas faoi láithreacht nua an Choimisiúin Eorpaigh ar an idirlíon"
 msgid "https://ec.europa.eu/info/language-policy_en"
 msgstr "https://ec.europa.eu/info/language-policy_ga"
 
-msgid "Language policy"
-msgstr "Beartas teanga"
-
 msgid "https://ec.europa.eu/info/resources-partners_en"
 msgstr "http://ec.europa.eu/info/resources-partners_ga"
 
@@ -53,20 +172,11 @@ msgstr "Acmhainní le haghaidh comhpháirtithe"
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_ga"
 
-msgid "Cookies"
-msgstr "Fianáin"
-
 msgid "https://ec.europa.eu/info/privacy-policy_en"
 msgstr "https://ec.europa.eu/info/privacy-policy_ga"
 
-msgid "Privacy policy"
-msgstr "Beartas príobháideachais"
-
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_ga"
-
-msgid "Legal notice"
-msgstr "Fógra dlíthiúil"
 
 msgid "https://ec.europa.eu/info/contact_en"
 msgstr "https://ec.europa.eu/info/contact_ga"
@@ -74,3 +184,5 @@ msgstr "https://ec.europa.eu/info/contact_ga"
 msgid "Contact"
 msgstr "Teagmháil"
 
+msgid "Policies, information and services"
+msgstr "Beartais, eolas agus seirbhísí"
