--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -1,15 +1,143 @@
+msgid ""
+msgstr ""
+
+msgid "https://europa.eu/european-union/contact/call-us_en"
+msgstr "https://europa.eu/european-union/contact/call-us_ro"
+
+msgid "telephone options"
+msgstr "opțiuni telefonice"
+
+msgid "https://europa.eu/european-union/contact/write-to-us_en"
+msgstr "https://europa.eu/european-union/contact/write-to-us_ro"
+
+msgid "contact form"
+msgstr "formularul de contact"
+
+msgid "https://europa.eu/european-union/contact/meet-us_en"
+msgstr "https://europa.eu/european-union/contact/meet-us_ro"
+
+msgid "local EU office"
+msgstr "local al UE"
+
+msgid "Search for EU social media channels"
+msgstr "Căutați canalele UE pe rețelele sociale"
+
+msgid "https://europa.eu/european-union/contact/social-networks_en"
+msgstr "https://europa.eu/european-union/contact/social-networks_ro"
+
+msgid "European Parliament"
+msgstr "Parlamentul European"
+
+msgid "http://www.europarl.europa.eu/portal/"
+msgstr "http://www.europarl.europa.eu/portal/ro"
+
+msgid "European Council"
+msgstr "Consiliul European"
+
+msgid "http://www.consilium.europa.eu/en/european-council/"
+msgstr "http://www.consilium.europa.eu/ro/european-council/"
+
+msgid "Council of the European Union"
+msgstr "Consiliul Uniunii Europene"
+
+msgid "http://www.consilium.europa.eu/en/home/"
+msgstr "http://www.consilium.europa.eu/ro/home/"
+
+msgid "https://www.romania2019.eu/home/"
+msgstr "https://www.romania2019.eu/"
 
 msgid "European Commission"
 msgstr "Comisia Europeană"
+
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "http://ec.europa.eu/index_ro.htm"
+
+msgid "Court of Justice of the European Union (CJEU)"
+msgstr "Curtea de Justiție a Uniunii Europene (CJUE)"
+
+msgid "http://curia.europa.eu/jcms/jcms/j_6/en/"
+msgstr "http://curia.europa.eu/jcms/jcms/j_6/ro/"
+
+msgid "European Central Bank (ECB)"
+msgstr "Banca Centrală Europeană (BCE)"
+
+msgid "https://www.ecb.europa.eu/home/html/index.en.html"
+msgstr "https://www.ecb.europa.eu/home/languagepolicy/html/index.ro.html"
+
+msgid "European Court of Auditors (ECA)"
+msgstr "Curtea Europeană de Conturi"
+
+msgid "http://www.eca.europa.eu/en"
+msgstr "http://www.eca.europa.eu/ro"
+
+msgid "European External Action Service (EEAS)"
+msgstr "Serviciul European de Acțiune Externă (SEAE)"
+
+msgid "https://eeas.europa.eu/headquarters/headquarters-homepage_en"
+msgstr "http://eeas.europa.eu/index_ro.htm"
+
+msgid "European Economic and Social Committee (EESC)"
+msgstr "Comitetul Economic și Social European (CESE)"
+
+msgid "http://www.eesc.europa.eu/?i=portal.en.home"
+msgstr "http://www.eesc.europa.eu/?i=portal.ro.home"
+
+msgid "European Committee of the Regions (CoR)"
+msgstr "Comitetul European al Regiunilor (CoR)"
+
+msgid "http://cor.europa.eu/en/"
+msgstr "http://cor.europa.eu/ro/"
+
+msgid "European Investment Bank (EIB)"
+msgstr "Banca Europeană de Investiții (BEI)"
+
+msgid "European Data Protection Supervisor (EDPS)"
+msgstr "Autoritatea Europeană pentru Protecția Datelor (AEPD)"
+
+msgid "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
+msgstr "https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=ro"
+
+msgid "Sitemap"
+msgstr "Hartă site"
+
+msgid "/european-union/abouteuropa/sitemap_en"
+msgstr "/european-union/abouteuropa/sitemap_ro"
+
+msgid "About this site"
+msgstr "Despre site"
+
+msgid "/european-union/abouteuropa_en"
+msgstr "/european-union/abouteuropa_ro"
+
+msgid "Language policy"
+msgstr "Politica lingvistică"
+
+msgid "/european-union/abouteuropa/language-policy_en"
+msgstr "/european-union/abouteuropa/language-policy_ro"
+
+msgid "Privacy policy"
+msgstr "Politica de confidențialitate"
+
+msgid "/european-union/abouteuropa/privacy-policy_en"
+msgstr "/european-union/abouteuropa/privacy-policy_ro"
+
+msgid "Legal notice"
+msgstr "Aviz juridic"
+
+msgid "/european-union/abouteuropa/legal_notices_en"
+msgstr "/european-union/abouteuropa/legal_notices_ro"
+
+msgid "Cookies"
+msgstr "Cookie-urile"
+
+msgid "/european-union/abouteuropa/cookies_en"
+msgstr "/european-union/abouteuropa/cookies_ro"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_ro"
 
 msgid "European Commission website"
 msgstr "Site-ul Comisiei Europene"
-
-msgid "Policies, information and services"
-msgstr "Informații și domenii de interes"
 
 msgid "Follow the European Commission"
 msgstr "Urmăriți Comisia Europeană"
@@ -41,9 +169,6 @@ msgstr "Despre noul portal al Comisiei"
 msgid "https://ec.europa.eu/info/language-policy_en"
 msgstr "https://ec.europa.eu/info/language-policy_ro"
 
-msgid "Language policy"
-msgstr "Politica lingvistică"
-
 msgid "https://ec.europa.eu/info/resources-partners_en"
 msgstr "http://ec.europa.eu/info/resources-partners_ro"
 
@@ -53,21 +178,14 @@ msgstr "Resurse pentru parteneri"
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_ro"
 
-msgid "Cookies"
-msgstr "Cookie-urile"
-
 msgid "https://ec.europa.eu/info/privacy-policy_en"
 msgstr "https://ec.europa.eu/info/privacy-policy_ro"
-
-msgid "Privacy policy"
-msgstr "Politica de confidențialitate"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_ro"
 
-msgid "Legal notice"
-msgstr "Aviz juridic"
-
 msgid "https://ec.europa.eu/info/contact_en"
 msgstr "https://ec.europa.eu/info/contact_ro"
 
+msgid "Policies, information and services"
+msgstr "Informații și domenii de interes"
